Migración a PostgreSQL, Prisma y conexión de API

--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "stripe": "^20.0.0"
+  },
+  "devDependencies": {
+    "@prisma/client": "^5.10.2",
+    "prisma": "^5.10.2"
   }
 }
