--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,9 @@ build
 package-lock.json
 
 # Archivos de entorno (claves secretas)
-
+.env
+server/.env
+*.env
 
 # Archivos de sistema/logs
 .DS_Store
